--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Company</title>
+    <title>Fast Games Studios</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <header>
         <div class="container">
-            <h1>Game Company</h1>
+            <h1>Fast Games Studios</h1>
             <nav>
                 <ul>
                     <li><a href="#home">Home</a></li>
@@ -25,7 +25,7 @@
 
     <section id="home">
         <div class="container">
-            <h2>Welcome to Game Company</h2>
+            <h2>Welcome to Fast Games Studios</h2>
             <p>Your ultimate destination for immersive gaming experiences!</p>
         </div>
     </section>
@@ -33,7 +33,7 @@
     <section id="about">
         <div class="container">
             <h2>About Us</h2>
-            <p>We are passionate about creating engaging and innovative games for players of all ages.</p>
+            <p>We make fast games</p>
         </div>
     </section>
 
@@ -41,12 +41,12 @@
         <div class="container">
             <h2>Our Games</h2>
             <div class="game">
-                <h3>Game Title 1</h3>
-                <p>Description of the game.</p>
+                <h3>SANIC IS REAL</h3>
+                <p>just a sonic fan game</p>
             </div>
             <div class="game">
-                <h3>Game Title 2</h3>
-                <p>Description of the game.</p>
+                <h3>Cube Slide</h3>
+                <p></p>
             </div>
             <!-- Add more games as needed -->
         </div>
@@ -70,7 +70,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Game Company. All rights reserved.</p>
+            <p>&copy; 2022 - 2024 Fast Games Studios. All rights reserved.</p>
         </div>
     </footer>
 
